fix missing color

--- a/v1.css
+++ b/v1.css
@@ -1,3 +1,4 @@
 .first {
     background: none;
+    background-color: blue;
 }
